--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aschrammel/google-maps",
     "description": "A wrapper for the Google Maps API",
-    "version": "v0.0.1-alpha",
+    "version": "v0.0.1",
     "type": "library",
     "authors": [
         {
